fixes spacing issue in mobile nav

--- a/_sass/_resize.scss
+++ b/_sass/_resize.scss
@@ -154,7 +154,7 @@
       bottom: -1px;
       background: lighten($blueGrayTwo,2);
 
-      .row ul li {
+      .row li {
          margin: auto
       }
 
